--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <header>Chloe's photgraphy website </header>
                     <ul>
                        <li><a href="index.html">home</a></li>
-                       <li><a href="portfolio.html"</a></li>
+                       <li><a href="portfolio.html">portfolio</a></li>
                     </ul>
                 </nav>
                 <main>
